--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -1,128 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>dynsem</artifactId>
-	<name>ds</name>
-	<packaging>spoofax-language</packaging>
-	<description>Spoofax DynSem (dynamic semantic specification) language implementation.</description>
-	<url>https://github.com/metaborg/dynsem</url>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>dynsem</artifactId>
+  <name>ds</name>
+  <packaging>spoofax-language</packaging>
+  <description>Spoofax DynSem (dynamic semantic specification) language implementation.</description>
+  <url>https://github.com/metaborg/dynsem</url>
 
-	<parent>
-		<groupId>org.metaborg</groupId>
-		<artifactId>parent.language</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../../releng/parent/language</relativePath>
-	</parent>
+  <parent>
+    <groupId>org.metaborg</groupId>
+    <artifactId>parent.language</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <relativePath>../../releng/parent/language</relativePath>
+  </parent>
 
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>install-stratego-jar</id>
-						<phase>install</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>dynsem.lib.stratego.jar</artifactId>
-							<version>${project.version}</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/target/metaborg/stratego.jar</file>
-						</configuration>
-					</execution>
-					<execution>
-						<id>install-stratego-javastrat</id>
-						<phase>install</phase>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<configuration>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>dynsem.lib.stratego.javastrat</artifactId>
-							<version>${project.version}</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/target/metaborg/stratego-javastrat.jar</file>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>install-stratego-jar</id>
+            <phase>install</phase>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <configuration>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>dynsem.lib.stratego.jar</artifactId>
+              <version>${project.version}</version>
+              <packaging>jar</packaging>
+              <file>${basedir}/target/metaborg/stratego.jar</file>
+            </configuration>
+          </execution>
+          <execution>
+            <id>install-stratego-javastrat</id>
+            <phase>install</phase>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <configuration>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>dynsem.lib.stratego.javastrat</artifactId>
+              <version>${project.version}</version>
+              <packaging>jar</packaging>
+              <file>${basedir}/target/metaborg/stratego-javastrat.jar</file>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>deploy-stratego-jar</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy-file</goal>
-						</goals>
-						<configuration>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>dynsem.lib.stratego.jar</artifactId>
-							<version>${project.version}</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/target/metaborg/stratego.jar</file>
-						</configuration>
-					</execution>
-					<execution>
-						<id>deploy-stratego-javastrat</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy-file</goal>
-						</goals>
-						<configuration>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>dynsem.lib.stratego.javastrat</artifactId>
-							<version>${project.version}</version>
-							<packaging>jar</packaging>
-							<file>${basedir}/target/metaborg/stratego-javastrat.jar</file>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.metaborg</groupId>
-			<artifactId>org.metaborg.meta.lang.esv</artifactId>
-			<type>spoofax-language</type>
-			<version>${metaborg-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.metaborg</groupId>
-			<artifactId>org.metaborg.meta.lang.template</artifactId>
-			<type>spoofax-language</type>
-			<version>${metaborg-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.metaborg</groupId>
-			<artifactId>org.metaborg.meta.lib.analysis</artifactId>
-			<type>spoofax-language</type>
-			<version>${metaborg-version}</version>
-		</dependency>
-	</dependencies>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>deploy-stratego-jar</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>deploy-file</goal>
+            </goals>
+            <configuration>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>dynsem.lib.stratego.jar</artifactId>
+              <version>${project.version}</version>
+              <packaging>jar</packaging>
+              <file>${basedir}/target/metaborg/stratego.jar</file>
+              <repositoryId>${deployRepositoryId}</repositoryId>
+              <url>${deployFileUrl}</url>
+            </configuration>
+          </execution>
+          <execution>
+            <id>deploy-stratego-javastrat</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>deploy-file</goal>
+            </goals>
+            <configuration>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>dynsem.lib.stratego.javastrat</artifactId>
+              <version>${project.version}</version>
+              <packaging>jar</packaging>
+              <file>${basedir}/target/metaborg/stratego-javastrat.jar</file>
+              <repositoryId>${deployRepositoryId}</repositoryId>
+              <url>${deployFileUrl}</url>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.meta.lang.esv</artifactId>
+      <type>spoofax-language</type>
+      <version>${metaborg-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.meta.lang.template</artifactId>
+      <type>spoofax-language</type>
+      <version>${metaborg-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.meta.lib.analysis</artifactId>
+      <type>spoofax-language</type>
+      <version>${metaborg-version}</version>
+    </dependency>
+  </dependencies>
 
-	<developers>
-		<developer>
-			<name>Vlad Vergu</name>
-			<email>v.a.vergu@tudelft.nl</email>
-			<organization>Delft University of Technology</organization>
-			<organizationUrl>http://www.ewi.tudelft.nl/en</organizationUrl>
-		</developer>
-	</developers>
+  <developers>
+    <developer>
+      <name>Vlad Vergu</name>
+      <email>v.a.vergu@tudelft.nl</email>
+      <organization>Delft University of Technology</organization>
+      <organizationUrl>http://www.ewi.tudelft.nl/en</organizationUrl>
+    </developer>
+  </developers>
 
-	<scm>
-		<connection>scm:git:git@github.com:metaborg/dynsem.git</connection>
-		<developerConnection>scm:git:git@github.com:metaborg/dynsem.git</developerConnection>
-		<url>https://github.com/metaborg/dynsem</url>
-	</scm>
+  <scm>
+    <connection>scm:git:git@github.com:metaborg/dynsem.git</connection>
+    <developerConnection>scm:git:git@github.com:metaborg/dynsem.git</developerConnection>
+    <url>https://github.com/metaborg/dynsem</url>
+  </scm>
 </project>
