--- a/dynsem2coq/metaborg.yaml
+++ b/dynsem2coq/metaborg.yaml
@@ -8,6 +8,8 @@ dependencies:
   - org.metaborg:org.metaborg.meta.lib.analysis:${metaborgVersion}
   - org.metaborg:org.metaborg.lang.coq:${metaborgVersion}
   - org.metaborg:dynsem:${metaborgVersion}
+  - org.metaborg:org.metaborg.meta.nabl2.shared:${metaborgVersion}
+  - org.metaborg:org.metaborg.meta.nabl2.runtime:${metaborgVersion}
 contributions:
 - name: ds
   id: org.metaborg:dynsem:${metaborgVersion}
