Revert "Temporarily disable Travis CI Maven repository cache"
This reverts commit fb113fd6c922a83417d44486d1b2860cdd20737c.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ before_script:
   - echo "MAVEN_OPTS='-server -Xms512m -Xmx1024m -Xss16m'" > ~/.mavenrc
 script: ./travis-build.sh
 
+cache:
+ directories:
+   - $HOME/.m2
+
 jdk:
   - oraclejdk8
